# snc-cribl-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.example.toml  pyproject.toml
docs/: CRIBL-CONTROL-PLANE-README.md  cribl-openapi-spec.yml
docs/collectors/: azure_blob.json  database.json  filesystem.json  google_cloud_storage.json  health_check.json  rest.json  s3.json  script.json  split_collectors.py  splunk.json
docs/examples/: auth.py  example_edge.py  example_onprem_auth.py  example_packs.py  example_stream.py  example_worker_group_replication.py
docs/pipeline_functions/: aggregate_metrics.json  aggregation.json  auto_timestamp.json  cef.json  chain.json  clone.json  code.json  comment.json  dns_lookup.json  drop.json  drop_dimensions.json  dynamic_sampling.json  eval.json  event_breaker.json  flatten.json  foldkeys.json  geoip.json  grok.json  json_unroll.json  lookup.json  mask.json  numerify.json  otlp_logs.json  otlp_metrics.json  otlp_traces.json  publish_metrics.json  redis.json  regex_extract.json  regex_filter.json  rename.json  rollup_metrics.json  sampling.json  serde.json  serialize.json  sidlookup.json  snmp_trap_serialize.json  split_functions.py  suppress.json  tee.json  trim_timestamp.json  (+2 more)
src/snc_cribl_mcp/: __init__.py  apps.py  config.py  prompts.py  resources.py  server.py
src/snc_cribl_mcp/client/: __init__.py  cribl_client.py  token_manager.py
src/snc_cribl_mcp/models/: __init__.py  collectors.py  pipeline_functions.py
src/snc_cribl_mcp/operations/: __init__.py  breakers.py  common.py  destinations.py  groups.py  lookups.py  pipelines.py  routes.py  sources.py  validation_errors.py
src/snc_cribl_mcp/tools/: __init__.py  common.py  list_breakers.py  list_destinations.py  list_groups.py  list_lookups.py  list_pipelines.py  list_routes.py  list_sources.py
src/snc_cribl_mcp/ui/: __init__.py  cribl-explorer.html
tests/: __init__.py
tests/unit/: __init__.py  test_breakers.py  test_collector_models.py  test_common.py  test_config.py  test_destinations.py  test_list_breakers_tool.py  test_list_destinations_tool.py  test_list_groups_tool.py  test_list_lookups_tool.py  test_list_pipelines_tool.py  test_list_routes_tool.py  test_list_sources_tool.py  test_lookups.py  test_pipeline_function_models.py  test_pipelines.py  test_prompts.py  test_resources.py  test_routes.py  test_server.py  test_sources.py  test_token_manager_base.py  test_token_manager_extended.py  test_validation_errors.py
